--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="#">blondiebytes</a></h1>
+						<h1><a href="#/">blondiebytes</a></h1>
 						<nav class="links">
 							<ul>
 								<li><a href="https://blondiebytes.github.io/">About Me</a></li>
@@ -61,6 +61,9 @@
 			<!-- controllers -->
 			<script src="assets/js/controllers/HomeController.js"></script>
 			<script src="assets/js/controllers/SingleItemController.js"></script>
+
+			<!-- services -->
+			<script src="assets/js/services/blog.js"></script>
 
 
 	</body>
