Working on directives

--- a/index.html
+++ b/index.html
@@ -66,5 +66,9 @@
 			<script src="assets/js/services/blog.js"></script>
 
 
+    		<!-- Directives -->
+      		<script src="assets/js/directives/post.js"></script>
+
+
 	</body>
 </html>
