--- a/assets/js/directives/post.html
+++ b/assets/js/directives/post.html
@@ -10,18 +10,18 @@
 			</div>
 		</header>
 		<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-		<p>Sure {{ hideButton }} Let’s create a webpage in 5 minutes. First, get a text-editor. I’m using Sublime, which you can download at http://www.sublimetext.com/, but others include TextEdit (with plain text) and Atom. Now, we’ll create an index.html file. Notice the extension - it's html because we are writing html. HTML stands for Hyper Text Markup Language and it’s something we can use to code up a quick webpage. With our index.html file open in our text editor, we'll write some boilerplate code. </p>
+		<p>Let’s create a webpage in 5 minutes. First, get a text-editor. I’m using Sublime, which you can download at http://www.sublimetext.com/, but others include TextEdit (with plain text) and Atom. Now, we’ll create an index.html file. Notice the extension - it's html because we are writing html. HTML stands for Hyper Text Markup Language and it’s something we can use to code up a quick webpage. With our index.html file open in our text editor, we'll write some boilerplate code. </p>
 
 		<!-- image-->
 
 		<p>This is code we have to write to define this file as an HTML file. Nearly everything in HTML is written with tags (those right and left arrow brackets) - why is this? Well it’s just the way the language is written. For the HTML tag, we have an opening tag and a closing tag, but this is not necessarily true for all tags. Now, we'll write some more code...</p>
 
-		<div ng-hide="{{ hideButton }}">
+		<!-- <div ng-hide="{{ hideButton }}">
 			<footer>
 			<ul class="actions">
 				<li><a href="#/{{index}}" class="button big">Continue Reading</a></li>
 			</ul>
 			</footer>
-		</div>
+		</div> -->
 		
 	</article>
