--- a/assets/js/directives/post.html
+++ b/assets/js/directives/post.html
@@ -16,12 +16,12 @@
 
 		<p>This is code we have to write to define this file as an HTML file. Nearly everything in HTML is written with tags (those right and left arrow brackets) - why is this? Well it’s just the way the language is written. For the HTML tag, we have an opening tag and a closing tag, but this is not necessarily true for all tags. Now, we'll write some more code...</p>
 
-		<!-- <div ng-hide="{{ hideButton }}">
+		<!-- <div ng-hide="{{ hideButton }}"> -->
 			<footer>
 			<ul class="actions">
 				<li><a href="#/{{index}}" class="button big">Continue Reading</a></li>
 			</ul>
 			</footer>
-		</div> -->
+		<!-- </div> -->
 		
 	</article>
