--- a/assets/js/directives/post.html
+++ b/assets/js/directives/post.html
@@ -10,6 +10,7 @@
 			</div>
 		</header>
 		<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+		<!-- figure out a way to iterate through content; also adding limit -->
 		<p>Let’s create a webpage in 5 minutes. First, get a text-editor. I’m using Sublime, which you can download at http://www.sublimetext.com/, but others include TextEdit (with plain text) and Atom. Now, we’ll create an index.html file. Notice the extension - it's html because we are writing html. HTML stands for Hyper Text Markup Language and it’s something we can use to code up a quick webpage. With our index.html file open in our text editor, we'll write some boilerplate code. </p>
 
 		<!-- image-->
@@ -19,6 +20,7 @@
 		<!-- <div ng-hide="{{ hideButton }}"> -->
 			<footer>
 			<ul class="actions">
+				<!-- figure out a way to change button text "Next Article, etc" and change the url (mod num of articles)-->
 				<li><a href="#/{{index}}" class="button big">Continue Reading</a></li>
 			</ul>
 			</footer>
