Hide and show working

--- a/assets/js/directives/htmlOne.html
+++ b/assets/js/directives/htmlOne.html
@@ -6,12 +6,9 @@
 			</div>
 		</div> -->
 <style>
-  	#hidden p{
+  	#hidden-from-you p{
     display:none;
 
-	}
-	#hidden p:first-child{
-    	display:block;
 	}
 </style>
 
