--- a/assets/js/directives/mainpost.html
+++ b/assets/js/directives/mainpost.html
@@ -10,7 +10,7 @@
 			</div>
 		</header>
 
-		<htmlone p= "p" i="$i" hideorshow="hidden"></htmlone>
+		<htmlone p= "p" i="$i" hideorshow="'hidden-from-you'"></htmlone>
 
 			<footer>
 			<ul class="actions">
