--- a/assets/js/directives/singlepost.html
+++ b/assets/js/directives/singlepost.html
@@ -10,7 +10,12 @@
 			</div>
 		</header>
 
-		<htmlone p= "p" i="$i" hideorshow="visible"></htmlone>
+		<htmlone p= "p" i="$i" hideorshow="'visible-to-you'"></htmlone>
+		
+	</article>
+
+<!-- Notes -->
+
 <!-- 		<div ng-repeat="para_context in p.paragraph_context">
 			<a href="#" class="image featured"><img ng-src=" {{ p.images[$index] }} " alt="" /></a>
 			<div ng-repeat="para in para_context">
@@ -28,5 +33,3 @@
 			</ul>
 			</footer> -->
 		<!-- </div> -->
-		
-	</article>
