--- a/extra.html
+++ b/extra.html
@@ -1,3 +1,12 @@
+
+	<!-- figure out a way to iterate through content; also adding limit -->
+	<!-- 		<div ng-repeat="para_context in p.paragraph_context |limitTo:2">
+				<a href="#" class="image featured"><img ng-src=" {{ p.images[$index] }} " alt="" /></a>
+				<div ng-repeat="para in para_context">
+					<p>{{ para_context[$index] }}</p>
+				</div>
+			</div> -->
+
 <!-- Posts List 
 							<section>
 								<ul class="posts">
