--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -8,8 +8,4 @@
 
 </style>
 
-<html>
-
-<div ng-include='js/directives/article0.html'></div>
-
-</html>
+<div ng-include="'js/directives/article0.html'"></div>
