--- a/public/index.html
+++ b/public/index.html
@@ -24,25 +24,15 @@
 							<ul>
 								<li><a href="https://blondiebytes.github.io/">About Me</a></li>
 								<li><a href="http://bit.ly/1NbxNzV">YouTube</a></li>
-								<li><a href="#blurb">All Posts</a></li>
-								<li><a href="#blurb">Contact</a></li>
+								<li><a href="#/">All Posts</a></li>
+								<li><a href="#/#blurb">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
 
 					<div ng-view></div>
 
-						<!-- Footer -->
-							<section id="footer">
-							<ul class="icons">
- 										<li><a href="https://www.instagram.com/blondiebytes/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
- 										<li><a href="https://twitter.com/blondiebytes" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
- 											<li><a href="http://bit.ly/1NbxNzV" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
- 											<li><a href="https://www.linkedin.com/in/blondiebytes" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
- 										<li><a href="https://github.com/blondiebytes" class="icon fa-github"><span class="label">GitHub</span></a></li> <li><a href="https://www.pinterest.com/blondiebytes" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li></ul>
-								<p class="copyright">&copy; Kathryn Hodge 2016.</p>
-							</section>
+						
 			</div>
 
 		<!-- Scripts -->
