--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 								<li><a href="https://blondiebytes.github.io/">About Me</a></li>
 								<li><a href="http://bit.ly/1NbxNzV">YouTube</a></li>
 								<li><a href="#/">All Posts</a></li>
-								<li><a href="#/#blurb">Contact</a></li>
+								<li><a href="#footer">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -51,7 +51,6 @@
 
 			<!-- services -->
 			<script src="js/services/blog.js"></script>
-
 
     		<!-- Directives -->
       		<script src="js/directives/mainpost.js"></script>
