Actually fixing links

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 								<li><a href="https://blondiebytes.github.io/">About Me</a></li>
 								<li><a href="http://bit.ly/1NbxNzV">YouTube</a></li>
 								<li><a href="#/">All Posts</a></li>
-								<li><a href="#footer">Contact</a></li>
+								<li><a href="mailto:blondiebytes@gmail.com?subject=Hello blondiebits!">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
