More dynamic link

--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -7,4 +7,4 @@
 
 </style>
 
-<div ng-include="'js/directives/article0.html'"></div>
+<div ng-include="'js/directives/article' + {{i}} + '.html'"></div>
