--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -7,6 +7,6 @@
 
 </style>
 
-<p>{{i}}</p>
+<p>{{ getString(3) }}</p>
 
-<div ng-include="{{i}}"></div>
+<div ng-include="js/directives/article0.html"></div>
