--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -7,6 +7,6 @@
 
 </style>
 
-<p>{{ getString(3) }}</p>
+<h3>{{ getString(3) }}</h3>
 
-<div ng-include="js/directives/article0.html"></div>
+<div ng-include="'js/directives/article0.html'"></div>
