--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -7,6 +7,7 @@
 
 </style>
 
-<h3>{{ getIncludeString($ind) }}</h3>
+
+<h3>{{ getIncludeString() }}</h3>
 
 <div ng-include="'js/directives/article0.html'"></div>
