--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -8,6 +8,6 @@
 </style>
 
 <h1> {{ ind }} </h1>
-<h3>{{ getIncludeString() }}</h3>
+<h3>{{ getIncludeString( {ind} ) }}</h3>
 
 <div ng-include="'js/directives/article0.html'"></div>
