--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -7,7 +7,6 @@
 
 </style>
 
-<h1> {{ ind }} </h1>
-<h3> {{ getIncludeString(ind) }}</h3>
+<h1> ind</h1>
 
 <div ng-include="'js/directives/article0.html'"></div>
