--- a/public/js/directives/mainpost.html
+++ b/public/js/directives/mainpost.html
@@ -10,7 +10,7 @@
 			</div>
 		</header>
 
-		<htmlone p= "p" ind="$i" hideorshow="'hidden-from-you'"></htmlone>
+		<htmlone p= "p" ind="i" hideorshow="'hidden-from-you'" url="'article' + i"></htmlone>
 
 			<footer>
 			<ul class="actions">
