--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -6,7 +6,5 @@
 }
 
 </style>
-<h1> {{ ind }} </h1>
-<h1> {{ url }} </h1>
 <h1> {{ getIncludeString() }} </h1>
-<div ng-include="'js/directives/article0.html'"></div>
+<div ng-include="getIncludeString()"></div>
