YES finally figured the dynamic articles out

--- a/public/js/directives/htmlOne.html
+++ b/public/js/directives/htmlOne.html
@@ -6,5 +6,5 @@
 }
 
 </style>
-<h1> {{ getIncludeString() }} </h1>
-<div ng-include="getIncludeString()"></div>
+
+<div ng-include="getArticle()"></div>
