--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     		<!-- Directives -->
       		<script src="js/directives/mainpost.js"></script>
       		<script src="js/directives/singlepost.js"></script>
-      		<script src="js/directives/htmlOne.js"></script>
+      		<script src="js/directives/articlepost.js"></script>
 
 
 	</body>
