--- a/public/js/directives/singlepost.html
+++ b/public/js/directives/singlepost.html
@@ -10,7 +10,7 @@
 			</div>
 		</header>
 
-		<htmlone p= "p" i="i" hideorshow="'visible-to-you'"></htmlone>
+		<articlepost p= "p" ind="i" hideorshow="'visible-to-you'"></articlepost>
 		
 	</article>
 
