--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,6 @@
 		<link rel="stylesheet" href="css/main.css"/>
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular.min.js"></script>
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular-route.js"></script>
-		 <script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
- 
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
- 
-  return t;
-}(document, "script", "twitter-wjs"));</script>
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -40,7 +24,7 @@
 							<ul>
 								<li><a href="https://blondiebytes.github.io/">About Me</a></li>
 								<li><a href="http://bit.ly/1NbxNzV">YouTube</a></li>
-								<li><a href="#/">All Posts</a></li>
+								<li><a href="#/allposts">All Posts</a></li>
 								<li><a href="mailto:blondiebytes@gmail.com?subject=Hello blondiebits!">Contact</a></li>
 							</ul>
 						</nav>
