Finishing All posts and author

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,8 @@
 			<!-- controllers -->
 			<script src="js/controllers/HomeController.js"></script>
 			<script src="js/controllers/SingleItemController.js"></script>
+			<script src="js/controllers/AllPostsController.js"></script>
+			<script src="js/controllers/AuthorController.js"></script>
 
 			<!-- services -->
 			<script src="js/services/blog.js"></script>
