Making all-posts more efficient

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
       		<script src="js/directives/mainpost.js"></script>
       		<script src="js/directives/singlepost.js"></script>
       		<script src="js/directives/articlepost.js"></script>
+      		<script src="js/directives/allpostssingle.js"></script>
 
 
 	</body>
