--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="css/main.css"/>
+		<link rel="stylesheet" href="css/style.css"/>
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular.min.js"></script>
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular-route.js"></script>
 		 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
+		<meta property:"fb:app_id"			   content="1718092488456329">
+		<meta property="og:url"                content="http://blondiebits.herokuapp.com/#/0" />
+		<meta property="og:type"               content="website"/>
+		<meta property="og:title"              content="HTML in 5 minutes"/>
+		<meta property="og:description"        content="Learn the basics of HTML for your first webpage in 5 minutes." />
+		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/article0/thumbnail.png" />
 	</head>
 
 	<body ng-app="blondiebits">
-
-		<!-- for Facebook -->
+<!-- 
+		for Facebook -->
 
 		<div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -26,10 +34,10 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 		
-		<!-- Wrapper -->
+		<!-- Wrapper
 			<div id="wrapper">
 
-				<!-- Header -->
+				 Header -->
 					<header id="header">
 						<h1><a href="#/">blondiebits</a></h1>
 						<nav class="links">
@@ -43,9 +51,9 @@
 					</header>
 
 					<div ng-view></div>
-
 						
 			</div>
+
 
 		<!-- Scripts -->
 			<script src="js/jquery.min.js"></script>
