--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-		<meta property:"fb:app_id"			   content="1718092488456329">
+		<!-- move to single html docs -->
+
+		<meta property="fb:app_id"			   content="1718092488456329">
 		<meta property="og:url"                content="http://blondiebits.herokuapp.com/#/0" />
 		<meta property="og:type"               content="website"/>
 		<meta property="og:title"              content="HTML in 5 minutes"/>
