--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 		<meta property="og:type"               content="website"/>
 		<meta property="og:title"              content="HTML in 5 minutes"/>
 		<meta property="og:description"        content="Learn the basics of HTML for your first webpage in 5 minutes." />
-		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/article0/thumbnail.png" />
+		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/article0/pin.png" />
 	</head>
 
 	<body ng-app="blondiebits">
@@ -36,7 +36,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 		
-		<!-- Wrapper
+		<!-- Wrapper -->
 			<div id="wrapper">
 
 				 Header -->
