--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				 Header -->
+				<!-- Header -->
 					<header id="header">
 						<h1><a href="#/">blondiebits</a></h1>
 						<nav class="links">
