--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="css/main.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
+		<link rel='stylesheet' href="bower_components/angular-socialshare/angular-socialshare.min.css">
+
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular.min.js"></script>
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular-route.js"></script>
 		 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
+		 <script src="bower_components/angular-socialshare/angular-socialshare.min.js"></script>
+
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
@@ -27,7 +31,7 @@
 <!-- 
 		for Facebook -->
 
-		<div id="fb-root"></div>
+	<!-- 	<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -35,7 +39,7 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=1718092488456329";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-		
+		 -->
 		<!-- Wrapper -->
 			<div id="wrapper">
 
