--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 <!-- 
 		for Facebook -->
 
-	<!-- 	<div id="fb-root"></div>
+		<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -39,7 +39,7 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=1718092488456329";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-		 -->
+		
 		<!-- Wrapper -->
 			<div id="wrapper">
 
