--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-		<!-- move to single html docs -->
-
-		<meta property="fb:app_id"			   content="1718092488456329">
-		<meta property="og:url"                content="http://blondiebits.herokuapp.com/" />
-		<meta property="og:type"               content="website"/>
-		<meta property="og:title"              content="blondiebits"/>
-		<meta property="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation" />
-		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/blondiebytes.png" />
+		<!-- move to single html docs --> />
 	</head>
 
 	<body ng-app="blondiebits">
