--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,31 @@
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular-route.js"></script>
 		 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 
+		 	<meta property="fb:app_id"			   content="1718092488456329">
+		<meta property="og:url"                content="http://blondiebits.herokuapp.com/" />
+		<meta property="og:type"               content="website"/>
+		<meta property="og:title"              content="blondiebits"/>
+		<meta property="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation" />
+		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
+
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
-		<!-- move to single html docs --> />
+		<!-- move to single html docs -->
 	</head>
 
 	<body ng-app="blondiebits">
 <!-- 
 		for Facebook -->
 
-	<!--	<div id="fb-root"></div>
+		<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=1718092488456329";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script> -->
+}(document, 'script', 'facebook-jssdk'));</script> 
 		
 		<!-- Wrapper -->
 			<div id="wrapper">
