--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,24 @@
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular-route.js"></script>
 		 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 
+		 <!-- Facebook metadata -->
+
 		 	<meta property="fb:app_id"			   content="1718092488456329">
 		<meta property="og:url"                content="http://blondiebits.herokuapp.com/" />
 		<meta property="og:type"               content="website"/>
 		<meta property="og:title"              content="blondiebits"/>
-		<meta property="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation" />
+		<meta property="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation." />
 		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
+
+
+		<!-- Twitter metadata -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@blondiebytes">
+		<meta name="twitter:title" content="blondiebits">
+		<meta name="twitter:description" content="Tutorials for new tech with confusing documentation">
+		<meta name="twitter:creator" content="@blondiebytes">
+		<meta name="twitter:image:src" content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
+		<meta name="twitter:domain" content="http://blondiebits.herokuapp.com/">
 
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
