--- a/public/js/directives/mainpost.html
+++ b/public/js/directives/mainpost.html
@@ -15,6 +15,8 @@
     <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fblondiebits.herokuapp.com%2F%23%2F0&amp;src=sdkpreparse" target="_blank" data-href="http://blondiebits.herokuapp.com/#/0">
         <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
     </a>
+
+
     
     <!-- Google+ -->
     <a href="https://plus.google.com/share?url=http://blondiebits.herokuapp.com/&#35;/0" target="_blank">
@@ -35,9 +37,9 @@
     <a href="javascript:;" onclick="window.print()">
         <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
     </a>
-
+    
     <!-- Twitter -->
-    <a href="https://twitter.com/share?url=http://blondiebits.herokuapp.com/&#35;/0&amp;text=HTML%20in%20Five&amp;hashtags=codein5" target="_blank">
+    <a href="https://twitter.com/share?url=http://blondiebits.herokuapp.com/&amp;text=Learn%20HTML%20in%205%20minutes!&amp;hashtags=codein5" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
     </a>
 
