Changing twitter metadata

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 		<meta name="twitter:title" content="blondiebits">
 		<meta name="twitter:description" content="Tutorials for new tech with confusing documentation">
 		<meta name="twitter:creator" content="@blondiebytes">
-		<meta name="twitter:image:src" content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
+		<meta name="twitter:image" content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
 		<meta name="twitter:domain" content="http://blondiebits.herokuapp.com/">
 
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
