--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 		<meta property="og:title"              content="blondiebits"/>
 		<meta property="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation." />
 		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
+		    <meta property="article:author" content="Kathryn Hodge" />
 
 
 		<!-- Twitter metadata -->
