--- a/public/js/directives/mainpost.html
+++ b/public/js/directives/mainpost.html
@@ -37,9 +37,9 @@
     <a href="javascript:;" onclick="window.print()">
         <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
     </a>
-    
+
     <!-- Twitter -->
-    <a href="https://twitter.com/share?url=http://blondiebits.herokuapp.com/&amp;text=Learn%20HTML%20in%205%20minutes!&amp;hashtags=codein5" target="_blank">
+    <a href="https://twitter.com/share?url=http://blondiebits.herokuapp.com/&amp;text=New%20coding%20tutorials%20every%20week!%20&amp;hashtags=codein5" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
     </a>
 
