--- a/public/js/directives/singlepost.html
+++ b/public/js/directives/singlepost.html
@@ -3,7 +3,7 @@
 			<div class="title">
 				<h2><a href="#/{{i}}"> {{ p.title }}</a></h2>
 				<p> {{ p.subtitle }}</p>
-				<div id="share-buttons">
+		<div id="share-buttons">
     
     <!-- Email -->
     <a href="mailto:?Subject=HTML%20in%205&amp;Body=I%20really%20like%20this%20tutorial!%20 http://blondiebits.herokuapp.com/#/0">
@@ -36,7 +36,7 @@
     </a>
 
     <!-- Twitter -->
-    <a href="https://twitter.com/share?url=http://blondiebits.herokuapp.com/&#35;/0&amp;text=HTML%20in%20Five&amp;hashtags=codein5" target="_blank">
+    <a href="https://twitter.com/share?url=http://blondiebits.herokuapp.com/&amp;text=New%20coding%20tutorials%20every%20week!%20&amp;hashtags=codein5" target="_blank">
         <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
     </a>
 
