--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 		 	<meta property="fb:app_id"			   content="1718092488456329">
 		<meta property="og:url"                content="http://blondiebits.herokuapp.com/" />
-		<meta property="og:type"               content="article"/>
+		<meta property="og:type"               content="website"/>
 		<meta property="og:title"              content="blondiebits"/>
 		<meta property="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation." />
 		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
