--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,12 @@
 		 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.12/angular-route.js"></script>
 		 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 
+		 <script
+    type="text/javascript"
+    async defer
+    src="//assets.pinterest.com/js/pinit.js"
+></script>
+
 		 <!-- Facebook metadata -->
 
 		 	<meta property="fb:app_id"			   content="1718092488456329">
