--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		<meta itemprop="og:headline"			content="blondiebits"/>
 		<meta property="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation." />
 		<meta itemprop="og:description"        content="A series of written and filmed tutorials for new technologies that have confusing documentation." />
-		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/blondiebytes.png">
+		<meta property="og:image"              content="http://blondiebits.herokuapp.com/images/blondiebits.png">
 		    <meta property="article:author" content="Kathryn Hodge" />
 
 
