Figuring out comments

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,16 @@
     src="//assets.pinterest.com/js/pinit.js"
 ></script>
 
+<script type="text/javascript" 
+        src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+<script type="text/javascript" 
+        src="easy-comment/jquery.easy-comment.min.js"></script>
+<script type="text/javascript">
+	jQuery(document).ready(function(){
+   $("#my-comment").EasyComment();
+});
+</script>
+
 		 <!-- Facebook metadata -->
 
 		 	<meta property="fb:app_id"			   content="1718092488456329">
